# Warehouse-Project

./: db.sqlite3  manage.py  pyproject.toml  requirements.txt
nfc/: admin.py  choices.py  custom_azure.py  models.py  resources.py  serializers.py  urls.py  views.py
nfc/migrations/: 0001_initial.py
warehouse/: auth_views.py  serializers.py  settings.py  urls.py
