[tool.poetry]
name = "warehouse-project"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "warehouse_project"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.3"
django-rest-framework = "^0.1.0"
pillow = "^10.0.0"
django-import-export = "^3.2.0"
django-cors-headers = "^4.1.0"
psycopg2 = "^2.9.6"
django-environ = "^0.10.0"
hypercorn = "^0.14.4"
django-storages = {extras = ["azure"], version = "^1.13.2"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
